# goodreads-arbol-xml

./: .gitignore  CMakeLists.txt  README.md
documentation/: README.md  comprension_problema.md  documentacion.aux  documentacion.out  documentacion.tex  documentacion.toc
libs/pugixml/: pugixml.hpp
src/: Book.h  GeneralTree.cpp  GeneralTree.h  TreeNode.h  XMLParser.cpp  XMLParser.h  main.cpp
tests/: test_main.cpp
